--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
   height: 380px;
   width: 300px;
   margin: 15px;
-  background-color: #0a1612;
+  background-color: #303030;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
  }
 
@@ -18,6 +18,7 @@
   width: 300px;
   color:rgb(21, 114, 21);
   border: solid black 2px;
+  border-radius: 8px;
   }
 
   .display{
